--- a/lesson_2/index.html
+++ b/lesson_2/index.html
@@ -21,7 +21,7 @@
 				<div class="content__img">
 					<img src="img/img_pink.png" alt="">
 				</div>
-				<div class="content__text_1">
+				<div class="content__text1">
 					<p>(Image credit: Alexander Reben)</p>
 					<p>By Alexander Reben <mark>28th November 2022</mark></p>
 					<h4>Will AI kill art? Not likely, says the artist Alexander Reben, who has been working with AI for years. In fact, we may be entering an exciting new period that changes how we think about creativity itself.</h4>
@@ -29,28 +29,28 @@
 					<p>At the time, I had access to a machine learning algorithm called GPT-3, which is capable of writing passages of original text. For instance, if you type in something like "The following is a description of a fish:", you might get back:<br />A fish is a small, silver-coloured creature with a long, slender body. Its fins are delicate and transparent, and its tail is forked. Its eyes are large and black, and its mouth is small.</p>
 					<p>It's not pulled from the internet – the AI writes itself. However, GPT-3 can do far more than a few sentences:</p>
 				</div>
-				<div class="content__list">
+				<div class="content__list1">
 					<ol>
 						<li>with the right prompts, it can produce essays</li>
 						<li>fiction</li>
 						<li>even articles like this one</li>
 					</ol>
 				</div>
-				<div class="content__text_2">
+				<div class="content__text2">
 					<p>Its writing often passes for human. I played with all manner of output: dad jokes, poems, sci-fi stories and more.</p>
 					<h4>To my delight, I discovered the AI could write the kind of text you see on a wall label next to a painting in an art gallery</h4>
 					<p>After a couple of weeks of experimentation, I realised the AI had the potential to describe imaginary artworks. To my delight, I discovered I could prompt it to write the kind of text you see on a wall label next to a painting in an art gallery. This would prove to be the start of a fascinating collaborative journey with GPT-3 and a suite of other AI art tools, leading to work that has ranged from a physical sculpture of toilet plungers to full-size oil paintings on the wall of a Mayfair art gallery. </p>
 					<p>In recent months, AI-generated art has provoked much debate about whether it will be bad news for artists. There's little doubt that there will be disruptive changes ahead, and there are still important questions about bias, ethics, ownership and representation that need to be answered. However, this would not be the first time that new technologies have caused upheaval in the art world – it's been happening for centuries. And in my own experience, working with AI to make sculptures, paintings and more has transformed how I think about the creative process and the possibilities of human-machine collaboration. I believe we're now seeing the emergence of a whole new artform.</p>
 					<p>You may also like:</p>
 				</div>
-				<div class="content__list_2">
+				<div class="content__list2">
 					<ul>
 						<li><a href="https://www.bbc.com/future/article/20180927-how-computers-made-art-from-bombs-and-weather-machines">How computers made art from bombs and weather machines</a></li>
 						<li><a href="https://www.bbc.com/culture/article/20220628-the-lost-masterpieces-being-revealed">The hidden images found in masterpieces</a></li>
 						<li><a href="https://www.bbc.com/future/machine-minds">BBC Future's Machine Minds series</a></li>
 					</ul>
 				</div>
-				<div class="content__text_3">
+				<div class="content__text3">
 					<p>To be clear, when I refer to AI, it's not an anthropomorphic or sentient system, but a machine learning algorithm – and there needs to be a human in the process. I quickly learnt this in my early experiments with GPT-3, when I asked it to create imaginary artworks. While it was fairly easy to get the system to create descriptions that all sounded good, getting it to create output that I considered interesting was another thing altogether. I spent about a month on "prompt engineering", a term which means writing effective input text for AI systems.</p>
 					<p>Once I found a sequence of initial words that would "tickle" the AI in the right way, I developed a workflow with GPT-3 and other algorithms that could produce a description of an artwork and the imagined human name of its creator, along with their birthdate and other details (which are sometimes gleaned by asking GPT-3 questions). I then sifted through hundreds to thousands of outputs to find ones that I like. Those were then fed back into the system to create more text. I then corrected for punctuation, spacing and other technical tweaks to the text (nothing that changes its meaning). <a href="https://www.bbc.com/future/article/20221123-the-weird-and-wonderful-art-created-when-ai-and-humans-unite">Read more...</a></p>
 				</div>
