--- a/lesson_3/index.html
+++ b/lesson_3/index.html
@@ -10,7 +10,7 @@
 		<header id="top" class="header">
 			<a target="_blank" href="https://en.wikipedia.org/wiki/Niki_Lauda">NIKI LAUDA(wiki)</a>
 		</header>
-		<main>
+		<main class="main">
 			<div class="content">
 				<div class="content__title">
 					<h1>"Don't talk too much, set a goal and achieve it"</h1>
@@ -41,9 +41,12 @@
 				<div class="ferrari__text">
 					<h4><a href="#ferrari"></a>Ferrari (1974–1977)</h4>
 					<img src="img/lauda_ferrari.jpg" alt="Niki Lauda Ferrari">
+					<div class="ferrari__content">
 					<p>After an unsuccessful start to the <span>1970s</span>, culminating in a disastrous start to the <span>1973</span> season, Ferrari regrouped completely under Luca di Montezemolo and were resurgent in 1974. The team's faith in the little-known Lauda was quickly rewarded by a second-place finish in his debut race for the team, the season-opening <a target="_blank" href="https://en.wikipedia.org/wiki/1974_Argentine_Grand_Prix">Argentine Grand Prix.</a> His first Grand Prix (GP) victory – and the first for Ferrari since <span>1972</span> – followed only three races later in the <a target="_blank" href="https://en.wikipedia.org/wiki/1974_Spanish_Grand_Prix">Spanish Grand Prix.</a> Although Lauda became the season's pacesetter, achieving six consecutive pole positions, a mixture of inexperience and mechanical unreliability meant Lauda won only one more race that year, the Dutch GP. He finished fourth in the Drivers' Championship and demonstrated immense commitment to testing and improving the car.</p>
-					<p>The <span>1975</span> Formula One season started slowly for Lauda; after no better than a fifth-place finish in the first four races, he won four of the next five driving the new Ferrari 312T. His first World Championship was confirmed with a third-place finish at the Italian Grand Prix at Monza; Lauda's teammate Regazzoni won the race and Ferrari clinched their first Constructors' Championship in 11 years. Lauda then picked up a fifth win at the last race of the year, the United States GP at Watkins Glen. He also became the first driver to lap the Nürburgring Nordschleife in under seven minutes, which was considered a huge feat as the Nordschleife section of the Nürburgring was two miles longer than it is today. Lauda did not win the German Grand Prix from pole position there that year; after battling hard with Patrick Depailler for the lead for the first half of the race, Lauda led for the first 9 laps but suffered a puncture at the Wippermann, 9 miles into the 10th lap and was passed by Carlos Reutemann, James Hunt, Tom Pryce and Jacques Laffite; Lauda made it back to the pits with a damaged front wing and a destroyed left front tyre. The Ferrari pit changed the destroyed tyre and Lauda managed to make it to the podium in 3rd behind Reutemann and Laffite after Hunt retired and Pryce had to slow down because of a fuel leak. Lauda was known for giving away any trophies he won to his local garage in exchange for his car to be washed and serviced.</p>
+					<p>The <span>1975</span> Formula One season started slowly for Lauda; after no better than a fifth-place finish in the first four races, he won four of the next five driving the new Ferrari 312T. His first World Championship was confirmed with a third-place finish at the Italian Grand Prix at Monza; Lauda's teammate Regazzoni won the race and Ferrari clinched their first Constructors' Championship in 11 years. Lauda then picked up a fifth win at the last race of the year, the United States GP at Watkins Glen. He also became the first driver to lap the Nürburgring Nordschleife in under seven minutes, which was considered a huge feat as the Nordschleife section of the Nürburgring was two miles longer than it is today. Lauda did not win the German Grand Prix from pole position there that year; after battling hard with Patrick Depailler for the lead for the first half of the race, Lauda led for the first 9 laps but suffered a puncture at the Wippermann, 9 miles into the 10th lap and was passed by Carlos Reutemann, James Hunt, Tom Pryce and Jacques Laffite; Lauda made it back to the pits with a damaged front wing and a destroyed left front tyre.</p>
+					<p>The Ferrari pit changed the destroyed tyre and Lauda managed to make it to the podium in 3rd behind Reutemann and Laffite after Hunt retired and Pryce had to slow down because of a fuel leak. Lauda was known for giving away any trophies he won to his local garage in exchange for his car to be washed and serviced.</p>
 					<p>Unlike <span>1975</span> and despite tensions between Lauda and Montezemolo's successor, Daniele Audetto, Lauda dominated the start of the <span>1976</span> Formula One season, winning four of the first six races and finishing second in the other two. By the time of his fifth win of the year at the British GP, he had more than double the points of his closest challengers Jody Scheckter and James Hunt, and a second consecutive World Championship appeared a formality. It was a feat not achieved since Jack Brabham's victories in <span>1959</span> and <span>1960</span>. He also looked set to win the most races in a season, a record held by the late Jim Clark since <span>1963</span>.</p>
+				</div>
 				</div>
 				<div class="crash__text">
 					<h4><a href="#crash">1976 Nürburgring crash</a></h4>
@@ -51,10 +54,43 @@
 					<p>On <span>1 August 1976</span>, during the second lap at the very fast left kink before Bergwerk, Lauda was involved in an accident where his Ferrari swerved off the track, hit an embankment, burst into flames, and made contact with Brett Lunger's Surtees-Ford car. Unlike Lunger, Lauda was trapped in the wreckage. Drivers Arturo Merzario, Lunger, Guy Edwards, and Harald Ertl arrived at the scene a few moments later, but before Merzario was able to pull Lauda from his car, he suffered severe burns to his head and hands and inhaled hot toxic gases that damaged his lungs and blood. In an interview with BBC Radio 5 Live ("I Was There -- <span>May 21, 2019"</span>; "Niki Lauda speaks in <span>2015</span>"), Lauda said, "...there were basically two or three drivers trying to get me out of the car, but one was Arturo Merzario, the Italian guy, who also had to stop there at the scene, because I blocked the road; and he really came into the car himself, and uh, triggered my, my seatbelt loose, and then pulled me out. It was unbelievable, how he could do that, and I met him afterwards, and I said, 'How could you do it?!'. He said, 'Honestly, I do not know, but to open your seatbelt was so difficult, because you were pushing so hard against it, and when it was open, I got you out of the car like a feather...'." As Lauda was wearing a modified helmet, it didn't fit him properly; the foam had compressed and it slid off his head after the accident, leaving his face exposed to the fire. Although Lauda was conscious and able to stand immediately after the accident, he later lapsed into a coma. While in hospital he was given the last rites, but he survived. <a href="https://en.wikipedia.org/wiki/Niki_Lauda#">Read more about Niki Lauda...</a></p>
 				</div>
 			</div>
+			<div class="text">
+				<p>
+					Lauda suffered extensive scarring from the burns to his head, losing most of his right ear as well as the hair on the right side of his head, his eyebrows, and his eyelids.
+				</p>
+				<p>
+					He chose to limit reconstructive surgery to replacing the eyelids and restoring their functionality.
+				</p>
+			</div>
+			<div class="text">
+				<p>
+					After the accident he always wore a cap to cover the scars on his head. He arranged for sponsors to use the cap for advertising.
+				</p>
+			</div>
+			<div class="subtext">
+				<p>
+					With Lauda out of the contest, Carlos Reutemann was taken on as his replacement.
+				</p>
+				<div class="sub-subtext">
+					<p>
+						Ferrari boycotted the Austrian Grand Prix in protest at what they saw as preferential treatment shown towards McLaren driver James Hunt at the Spanish and British Grands Prix.
+					</p>
+				</div>
+			</div>
+			<div class="subtext">
+				<p>Lauda missed only two races, appearing at the Monza press conference six weeks after the accident with his fresh burns still bandaged.</p>
+				<div class="sub-subtext">
+					<p>
+						He finished fourth in the Italian GP, despite being, by his own admission, absolutely petrified. 
+					</p>
+				</div>
+			</div>
 		</main>
-		<footer>
-			<h4>Back to <mark><a href="#top">top</a></mark></h4>
-			<span>* The source is a resource <a href="https://en.wikipedia.org/wiki/Niki_Lauda#">WIKIPEDIA.</a> The material was used for educational purposes.</span>
+		<p>You are interested?</p>
+		<footer class="footer">
+			<p class="back">Back to <a href="#top">top</a></p>
+			<span>* The source is a resource <a href="https://en.wikipedia.org/wiki/Niki_Lauda#">WIKIPEDIA.</a></span>
 		</footer>
+		<p>The material was used for educational purposes.</p>
 	</body>
 </html>
