--- a/lesson_5/index.html
+++ b/lesson_5/index.html
@@ -30,7 +30,7 @@
 							Interactively productivate cross-platform vortals through tactical results. Interactively underwhelm efficient alignments with enabled materials. Rapidiously leverage existing superior technology via fully researched e-commerce. Efficiently whiteboard principle-centered portals vis-a-vis magnetic solutions. Conveniently network ethical e-markets with emerging web services.
 						</p>
 					</div>
-					<img src="img/img_01.jpg" alt="" class="image-one">
+					<img src="img/img_01.jpg" alt="Image" class="image-one">
 				</div>
 				<div class="content-part02">
 					<h2 class="title">Many of life’s failures are people who did not realize how close they were to success when they gave up.</h2>
@@ -45,8 +45,8 @@
 						</p>
 					</div>
 					<div class="images">
-						<img src="img/img_02.jpg" alt="" class="image-two image">
-						<img src="img/img_03.jpg" alt="" class="image-three image">
+						<img src="img/img_02.jpg" alt="Image" class="image-two image">
+						<img src="img/img_03.jpg" alt="Image" class="image-three image">
 					</div>
 				</div>
 			</div>
