--- a/lesson_5/index.html
+++ b/lesson_5/index.html
@@ -35,8 +35,8 @@
 						</p>
 					</div>
 					<div class="image-two image">
-						<img src="img/img_02.jpg" alt="Image">
-						<img src="img/img_03.jpg" alt="Image">
+						<img src="img/img_02.jpg" alt="Image" class="lake">
+						<img src="img/img_03.jpg" alt="Image" class="picture">
 					</div>
 					<div class="content-part03 content">
 						<p>
