Update and rename index_page_two.html to two.html

--- a/lesson_6/two.html
+++ b/lesson_6/two.html
@@ -31,8 +31,8 @@
                         </div>
                         <div class="article__buttons buttons-article">
 							<ul class="buttons-article">
-								<li class="button-article__page-choice"><a href="index_choice.html">Main</a></li>
-								<li class="button-article__page-two"><a href="index_page_one.html">Page One</a></li>
+								<li class="button-article__page-choice"><a href="index.html">Main</a></li>
+								<li class="button-article__page-two"><a href="one.html">Page One</a></li>
 								<li class="button-article__page-three">Page Three</li>
 							</ul>
 						</div>
