--- a/lesson_6/one.html
+++ b/lesson_6/one.html
@@ -33,8 +33,8 @@
 						</div>
 						<div class="article__buttons buttons-article">
 							<ul class="buttons-article">
-								<li class="button-article__page-choice"><a href="index_choice.html">Main</a></li>
-								<li class="button-article__page-two"><a href="index_page_two.html">Page Two</a></li>
+								<li class="button-article__page-choice"><a href="index.html">Main</a></li>
+								<li class="button-article__page-two"><a href="two.html">Page Two</a></li>
 								<li class="button-article__page-three">Page Three</li>
 							</ul>
 						</div>
