--- a/lesson_6/index.html
+++ b/lesson_6/index.html
@@ -17,8 +17,8 @@
                             <img src="img/page_choice/logo.svg" alt="Logo">
                         </div>
                         <div class="choice-page__list list-page-choice">
-                            <li><a href="index_page_one.html">Page one</a></li>
-                            <li><a href="index_page_two.html">Page two</a></li>
+                            <li><a href="one.html">Page one</a></li>
+                            <li><a href="two.html">Page two</a></li>
                             <li class="list-page-choice-3">Page three</li>
                         </div>
                     </div>
