--- a/lesson_6/index.html
+++ b/lesson_6/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 	<head>
@@ -17,9 +18,11 @@
                             <img src="img/page_choice/logo.svg" alt="Logo">
                         </div>
                         <div class="choice-page__list list-page-choice">
-                            <li><a href="one.html">Page one</a></li>
-                            <li><a href="two.html">Page two</a></li>
-                            <li class="list-page-choice-3">Page three</li>
+                            <ul class="list-page-choice__list">
+                                <li><a href="one.html">Page one</a></li>
+                                <li><a href="two.html">Page two</a></li>
+                                <li class="list-page-choice-3">Page three</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
