--- a/lesson_6/one.html
+++ b/lesson_6/one.html
@@ -31,11 +31,11 @@
 						<div class="article__text-block">
 							<p>Quickly monetize synergistic portals via efficient e-commerce. Phosfluorescently reinvent frictionless intellectual capital vis-a-vis an expanded array of niches. Efficiently provide access to interactive scenarios vis-a-vis bleeding-edge value. Energistically maximize premium meta-services and multifunctional collaboration and idea-sharing. Dramatically unleash front-end value after out-of-the-box opportunities. Energistically streamline magnetic action items after global markets. Collaboratively scale backward-compatible leadership skills and 24/7 best practices. Objectively exploit emerging methodologies vis-a-vis functionalized ideas. Energistically reconceptualize out-of-the-box innovation vis-a-vis cooperative methods of empowerment.</p>
 						</div>
-						<div class="article__buttons buttons-article">
-							<ul class="buttons-article">
-								<li class="button-article__page-choice"><a href="index.html">Main</a></li>
-								<li class="button-article__page-two"><a href="two.html">Page Two</a></li>
-								<li class="button-article__page-three">Page Three</li>
+						<div class="navigation__buttons buttons-navigation">
+							<ul class="buttons-navigation">
+								<li class="button-navigation__page-choice"><a href="index.html">Main</a></li>
+								<li class="button-navigation__page-two"><a href="two.html">Page Two</a></li>
+								<li class="button-navigation__page-three">Page Three</li>
 							</ul>
 						</div>
 					</div>
