--- a/lesson_10/index.html
+++ b/lesson_10/index.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
         <div class="wrapper">
-            <header class="header">
+                       <header class="header">
                 <div class="header__container">
                     <a href="" class="header__logo"><img src="img/header/logo.svg" alt="Vence"></a>
                     <nav class="header__menu menu">
@@ -38,10 +38,10 @@
                             <li class="social__item">
                                 <a href="" class="social__link">Ln</a>
                             </li>
-                            <li class="social__item">
-                                <a href="" class="social__link"><img src="img/header/search.svg" alt="Icon"></a>
-                            </li>
                         </ul>
+                    </div>
+                    <div class="header__search search">
+                            <a href="" class="search__link"><img src="img/header/search.svg" alt="Icon"></a>
                     </div>
                 </div>
             </header>
