--- a/lesson_10/index.html
+++ b/lesson_10/index.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
         <div class="wrapper">
-                       <header class="header">
+            <header class="header">
                 <div class="header__container">
                     <a href="" class="header__logo"><img src="img/header/logo.svg" alt="Vence"></a>
                     <nav class="header__menu menu">
@@ -51,24 +51,10 @@
                         <div class="main-block__body body-main-block">
                             <div class="body-main-block__content content-main-block">
                                 <div class="content-main-block__body">
-                                    <div class="content-main-block__autor">Tomas Edwardo</div>
-                                    <h1 class="content-main-block__title">Instagram artists with great photography skills</h1>
-                                    <div class="content-main-block__slider slider-main-block swiper">
-                                        <div class="slider-main-block__slider swiper-slide">
-                                            <img src="img/main/01.jpg" alt="Image">
-                                        </div>
-                                        <div class="slider-main-block__slider swiper-slide">
-                                            <img src="img/main/01.jpg" alt="Image">
-                                        </div>
-                                        <div class="slider-main-block__slider swiper-slide">
-                                            <img src="img/main/01.jpg" alt="Image">
-                                        </div>
-                                        <div class="slider-main-block__slider swiper-slide">
-                                            <img src="img/main/01.jpg" alt="Image">
-                                        </div>
-                                        <div class="slider-main-block__slider swiper-slide">
-                                            <img src="img/main/01.jpg" alt="Image">
-                                        </div>
+                                    <img class="content-main-block__image" src="img/main/01.jpg" alt="Image">
+                                    <div class="content-main-block__inform">
+                                        <div class="content-main-block__autor">Tomas Edwardo</div>
+                                        <h1 class="content-main-block__title">Instagram artists with great photography skills</h1>
                                     </div>
                                 </div>
                             </div>
