--- a/lesson_10/index.html
+++ b/lesson_10/index.html
@@ -54,7 +54,7 @@
                                     <img class="content-main-block__image" src="img/main/01.jpg" alt="Image">
                                     <div class="content-main-block__inform">
                                         <div class="content-main-block__autor">Tomas Edwardo</div>
-                                        <h1 class="content-main-block__title">Instagram artists with great photography skills</h1>
+                                        <h1 class="content-main-block__title">Instagram artists with great<br>photography skills</h1>
                                     </div>
                                 </div>
                             </div>
@@ -64,7 +64,7 @@
                 <section class="page__design design">
                     <div class="design__container">
                         <div class="design__header header-design">
-                            <h2 class="header-design__title title-left">Design is not just what it looks like and feels like.</h2>
+                            <h2 class="header-design__title title-left">Design is not just what it looks<br>like and feels like.</h2>
                             <div class="header-design__sub-menu sub-menu-design">
                                 <ul class="sub-menu-design__list">
                                     <li class="sub-menu-design__item">
@@ -148,31 +148,34 @@
                             <h2 class="header-trending__title title-left">Trending</h2>
                         </div>
                         <div class="trending__category">
-                            <div class="trending__items">
-                                <div class="trending__item item-trending">
-                                    <img src="img/trending/01.jpg" alt="Image">
-                                    <div class="item-trending__data">29.Jun.2021</div>
-                                    <h3 class="item-trending__title title-description">Richard Norton photorealistic rendering as real photos</h3>
+                            <div class="trending__items-one">
+                                    <div class="trending__item item-trending">
+                                        <img src="img/trending/01.jpg" alt="Image">
+                                        <div class="item-trending__data">29.Jun.2021</div>
+                                        <h3 class="item-trending__title title-description">Richard Norton photorealistic rendering as real photos</h3>
+                                    </div>
+                                    <div class="trending__item item-trending">
+                                        <img src="img/trending/02.jpg" alt="Image">
+                                        <div class="item-trending__data">29.Jun.2021</div>
+                                        <h3 class="item-trending__title title-description">Richard Norton photorealistic rendering as real photos</h3>
+                                    </div>
                                 </div>
-                                <div class="trending__item item-trending">
-                                    <img src="img/trending/02.jpg" alt="Image">
-                                    <div class="item-trending__data">29.Jun.2021</div>
-                                    <h3 class="item-trending__title title-description">Richard Norton photorealistic rendering as real photos</h3>
-                                </div>
-                                <div class="trending__item item-trending">
-                                    <img src="img/trending/03.jpg" alt="Image">
-                                    <div class="item-trending__data">29.Jun.2021</div>
-                                    <h3 class="item-trending__title title-description">Richard Norton photorealistic rendering as real photos</h3>
-                                </div>
-                                <div class="trending__item item-trending">
-                                    <img src="img/trending/04.jpg" alt="Image">
-                                    <div class="item-trending__data">29.Jun.2021</div>
-                                    <h3 class="item-trending__title title-description">Richard Norton photorealistic rendering as real photos</h3>
-                                </div>
-                                <div class="trending__item item-trending">
-                                    <img src="img/trending/05.jpg" alt="Image">
-                                    <div class="item-trending__data">29.Jun.2021</div>
-                                    <h3 class="item-trending__title title-description">Richard Norton photorealistic rendering as real photos</h3>
+                                <div class="trending__items-two">
+                                    <div class="trending__item item-trending">
+                                        <img src="img/trending/03.jpg" alt="Image">
+                                        <div class="item-trending__data">29.Jun.2021</div>
+                                        <h3 class="item-trending__title title-description">Richard Norton photorealistic rendering as real photos</h3>
+                                    </div>
+                                    <div class="trending__item item-trending">
+                                        <img src="img/trending/04.jpg" alt="Image">
+                                        <div class="item-trending__data">29.Jun.2021</div>
+                                        <h3 class="item-trending__title title-description">Richard Norton photorealistic rendering as real photos</h3>
+                                    </div>
+                                    <div class="trending__item item-trending">
+                                        <img src="img/trending/05.jpg" alt="Image">
+                                        <div class="item-trending__data">29.Jun.2021</div>
+                                        <h3 class="item-trending__title title-description">Richard Norton photorealistic rendering as real photos</h3>
+                                    </div>
                                 </div>
                             </div>
                         </div>
