--- a/lesson_10/index.html
+++ b/lesson_10/index.html
@@ -150,70 +150,81 @@
                         <div class="trending__category">
                             <div class="trending__items-one">
                                     <div class="trending__item item-trending">
-                                        <img src="img/trending/01.jpg" alt="Image">
-                                        <div class="item-trending__data">29.Jun.2021</div>
-                                        <h3 class="item-trending__title title-description">Richard Norton photorealistic rendering as real photos</h3>
+                                        <img class="item-trending-image-one" src="img/trending/01.jpg" alt="Image">
+                                        <div class="item-trending-information">
+                                            <div class="item-trending__data">29.Jun.2021</div>
+                                            <h3 class="item-trending__title title-description">Richard Norton photorealistic rendering as<br>real photos</h3>
+                                        </div>
                                     </div>
                                     <div class="trending__item item-trending">
-                                        <img src="img/trending/02.jpg" alt="Image">
-                                        <div class="item-trending__data">29.Jun.2021</div>
-                                        <h3 class="item-trending__title title-description">Richard Norton photorealistic rendering as real photos</h3>
+                                        <img class="item-trending-image-two" src="img/trending/02.jpg" alt="Image">
+                                        <div class="item-trending-information">
+                                            <div class="item-trending__data">29.Jun.2021</div>
+                                            <h3 class="item-trending__title title-description">Richard Norton photorealistic<br>rendering as real photos</h3>
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="trending__items-two">
                                     <div class="trending__item item-trending">
-                                        <img src="img/trending/03.jpg" alt="Image">
-                                        <div class="item-trending__data">29.Jun.2021</div>
-                                        <h3 class="item-trending__title title-description">Richard Norton photorealistic rendering as real photos</h3>
+                                        <img class="item-trending-image-three" src="img/trending/03.jpg" alt="Image">
+                                        <div class="item-trending-information">
+                                            <div class="item-trending__data">29.Jun.2021</div>
+                                            <h3 class="item-trending__title title-description">Richard Norton photorealistic<br>rendering as real photos</h3>
+                                        </div>
                                     </div>
                                     <div class="trending__item item-trending">
-                                        <img src="img/trending/04.jpg" alt="Image">
-                                        <div class="item-trending__data">29.Jun.2021</div>
-                                        <h3 class="item-trending__title title-description">Richard Norton photorealistic rendering as real photos</h3>
+                                        <img class="item-trending-image-four" src="img/trending/04.jpg" alt="Image">
+                                        <div class="item-trending-information">
+                                            <div class="item-trending__data">29.Jun.2021</div>
+                                            <h3 class="item-trending__title title-description">Richard Norton photorealistic<br>rendering as real photos</h3>
+                                        </div>
                                     </div>
                                     <div class="trending__item item-trending">
                                         <img src="img/trending/05.jpg" alt="Image">
-                                        <div class="item-trending__data">29.Jun.2021</div>
-                                        <h3 class="item-trending__title title-description">Richard Norton photorealistic rendering as real photos</h3>
+                                        <div class="item-trending-information">
+                                            <div class="item-trending__data">29.Jun.2021</div>
+                                            <h3 class="item-trending__title title-description">Richard Norton photorealistic<br>rendering as real photos</h3>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
                 </section>
             </main>
             <footer class="footer">
                 <div class="footer__container">
-                    <a href="" class="footer__logo"><img src="img/footer/logo_2.svg" alt="Vence"></a>
-                    <nav class="footer__menu menu-footer">
-                        <ul class="menu-footer__list">
-                            <li class="menu-footer__item">
-                                <a href="" class="menu-footer__link">About Studio</a>
-                            </li>
-                            <li class="menu-footer__item">
-                                <a href="" class="menu-footer__link">Archive</a>
-                            </li>
-                            <li class="menu-footer__item">
-                                <a href="" class="menu-footer__link">Contact Us</a>
-                            </li>
-                        </ul>
-                    </nav>
-                    <div class="footer__social social">
-                        <ul class="social__list">
-                            <li class="social__item">
-                                <a href="" class="social__link">Fb</a>
-                            </li>
-                            <li class="social__item">
-                                <a href="" class="social__link">Tw</a>
-                            </li>
-                            <li class="social__item">
-                                <a href="" class="social__link">Ln</a>
-                            </li>
-                        </ul>
+                    <div class="footer__part-one">
+                        <a href="" class="footer__logo"><img src="img/footer/logo_2.svg" alt="Vence"></a>
+                        <nav class="footer__menu menu-footer">
+                            <ul class="menu-footer__list">
+                                <li class="menu-footer__item">
+                                    <a href="" class="menu-footer__link">About Studio</a>
+                                </li>
+                                <li class="menu-footer__item">
+                                    <a href="" class="menu-footer__link">Archive</a>
+                                </li>
+                                <li class="menu-footer__item">
+                                    <a href="" class="menu-footer__link">Contact Us</a>
+                                </li>
+                            </ul>
+                        </nav>
+                        <div class="footer__social social-footer">
+                            <ul class="social-footer__list">
+                                <li class="social-footer__item">
+                                    <a href="" class="social-footer__link">Fb</a>
+                                </li>
+                                <li class="social-footer__item">
+                                    <a href="" class="social-footer__link">Tw</a>
+                                </li>
+                                <li class="social-footer__item">
+                                    <a href="" class="social-footer__link">Ln</a>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
                     <div class="footer__info info-footer">
-                        <div class="info-footer__adress">1088, North Street, Alexandria, AU</div>
-                        <div class="info-footer__copy">© 2022, All Rights Reserved</div>
+                            <div class="info-footer__adress">1088, North Street, Alexandria, AU</div>
+                            <div class="info-footer__copy">© 2022, All Rights Reserved</div>
                     </div>
                 </div>
             </footer>
