--- a/lesson_16/index.html
+++ b/lesson_16/index.html
@@ -128,14 +128,14 @@
                                     <textarea name="user-message" class="details-block__textarea" placeholder="Additional information"></textarea>
                                 </div>
                             </div>
-                            <div class="billing-block__radio radio-block">
-                                <div class="radio-block__checkbox">
-                                    <input class="radio-block__input-check" value="yes" id="create-account" checked type="checkbox">
-                                    <label for="create-account" class="radio-block__label">Create Account</label>
+                            <div class="billing-block__radio radio-block-radio">
+                                <div class="radio-block-radio__checkbox">
+                                    <input class="radio-block-radio__input-check" value="yes" id="create-account" checked type="checkbox">
+                                    <label for="create-account" class="radio-block-radio__label">Create Account</label>
                                 </div>
-                                <div class="radio-block__checkbox">
-                                    <input class="radio-block__input-check" value="yes" id="ship-address" type="checkbox">
-                                    <label for="ship-address" class="radio-block__label">Ship to a different address?</label>
+                                <div class="radio-block-radio__checkbox">
+                                    <input class="radio-block-radio__input-check" value="yes" id="ship-address" type="checkbox">
+                                    <label for="ship-address" class="radio-block-radio__label">Ship to a different address?</label>
                                 </div>
                             </div>
                             <h3 class="billing-block__title-two">Apply Coupon to get discount!</h3>
