--- a/lesson_16/index.html
+++ b/lesson_16/index.html
@@ -45,9 +45,9 @@
                             </div>
                             <div class="shipping-block__address address-block block">
                                 <label for="address" class="address-block__label label">Street Address</label>
-                                <input type="text" name="user-address" id="address-1" required class="address-block__input input">
-                                <input type="text" name="user-address" id="address-2" class="address-block__input input">
-                                <input type="text" name="user-address" id="address-3" class="address-block__input input">
+                                <input type="text" name="user-address" id="address" required class="address-block__input input">
+                                <input type="text" name="user-address" id="address" class="address-block__input input">
+                                <input type="text" name="user-address" id="address" class="address-block__input input">
                             </div>
                             <div class="shipping-block__country country-block block">
                                 <label for="country" class="country-block__label label">Country</label>
